Fix details page header overlap

--- a/frontend/src/components/layout/WithHeader/styles.scss
+++ b/frontend/src/components/layout/WithHeader/styles.scss
@@ -4,4 +4,9 @@
 
   width: 100%;
   height: 100%;
+
+  .Header {
+    flex-grow: 0;
+    flex-shrink: 0;
+  }
 }
